Water tab: Fixed: Show sugar atom shouldn't change the color of salt ions
Water tab: Fixed: Salt ions go to the wrong bucket when removed from the model
Water tab: Fixed: Salt isn't removed from the model on reset all
Water tab: Fixed: Sucrose crystal should have a good structure in the bucket on initialization
Water tab: Added salt
Water tab: Generalized SucroseCrystalNode to CrystalNode
Rewrote Compound to iterate over particles, not constituents
Water tab: Added clipping for water molecules
Water tab: Increased the height of the particle window
Water tab: Moved buckets closer to the bottom of the canvas
Water tab: Made it so the user can drag the sugar molecule out of the model back to the bucket
Water tab: Made it so the user can drag the sugar molecule in the model
Water tab: Fixed: After creating the sugar molecule in the model, colors should respect the "show sugar atoms" flag
Water tab: When the user drags sugar from the bucket, if it isn't dropped in the particle window, it should move back to the bucket
Water tab: Made it so crystals don't change size when dropped in the play area
Water tab: Disabled box2d DebugDraw by default
Water tab: Factored out SucroseCrystalNode
Water tab: Remove overlapping water molecules when sucrose crystal is added to the model
Water tab: Add sucrose to the model when dropped
Water tab: Improved performance by decreasing probability of interaction
Water tab: Removed unused code
Water tab: Use correct scale for atoms/molecules/crystals
Water tab: Use the correct angle for H2O
Water tab: Made bucket contents smaller, but crystals grow to full size when grabbed out of the bucket
Water tab: Coulomb’s law should be in model coordinates not box2d coordinates
Water tab: Sucrose grows and moves in front of the bucket when grabbed
Water tab: Fixed location of sugar within bucket
Water tab: Added rotation and torque
Water tab: Added charges for particles
Water tab: Set the jbox2d position of the atoms within the molecule